Fix titles:hover on mobile
See https://github.com/marienfressinaud/FreshRSS/issues/385 and
https://github.com/marienfressinaud/FreshRSS/issues/320

--- a/p/themes/template/template.css
+++ b/p/themes/template/template.css
@@ -605,6 +605,7 @@ a.btn {
 	.flux:not(.current):hover .item.title {
 		position: relative;
 		width: auto;
+		white-space: nowrap;
 	}
 
 	#notification,
